--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 Backend en Java con Spring Boot (autenticación, REST API), 
                 frontend en Angular y base de datos MySQL. 
                 Actualmente en entorno local (en desarrollo para despliegue online).</p><p>
-                <a href="https://github.com/GallegoVL/gallegovl.github.io" target="_blank">Código en GitHub</a>
+                <a href="https://github.com/GallegoVL" target="_blank">Código en GitHub</a>
             </p>
         </div>
         <div class="item">
             <h4>Libro de Cocina App (En desarrollo) <span>2025</span></h4>
             <p>Aplicación web para crear y gestionar tu propio recetario digital personalizado. Permite añadir, editar y organizar recetas de forma fácil, evitando la necesidad de buscar en internet o libros físicos.</p>
             <p>Frontend con Angular, backend con Spring Boot, base de datos MySQL. Actualmente implementando funcionalidades clave como CRUD de recetas, autenticación de usuarios y diseño responsive.</p>
-            <p><a href="https://github.com/GallegoVL" target="_blank">Código en GitHub</a></p>
+            <!--<p><a href="https://github.com/GallegoVL" target="_blank">Código en GitHub</a></p>-->
         </div>
     </section>
 
