--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <span><img src="src/assets/pin.png" class="logo-invertida" alt="Tu Foto"> España</span>
       <span><img src="src/assets/mail.png" class="logo-invertida" alt="Tu Foto"> <a href="mailto:alexgallegofernandez0594@gmail.com">alexgallegofernandez0594@gmail.com</a></span>
       <span><img src="src/assets/phone.png" class="logo-invertida" alt="Tu Foto"><a href="tel:+34658211311">+34 658 211 311</a></span>
-      <span><a href="https://www.linkedin.com/in/alexandre-gallego-fern%C3%A1ndez-564403273/" class="logo-invertida" target="_blank"><img src="src/assets/linkedin.png" alt="Tu Foto"></a></span>
-      <span><a href="https://github.com/GallegoVL" class="logo-invertida" target="_blank"><img src="src/assets/github.png" alt="Tu Foto"></a></span>
+      <a href="https://www.linkedin.com/in/alexandre-gallego-fern%C3%A1ndez-564403273/" class="logo-invertida" target="_blank"><img src="src/assets/linkedin.png" alt="Linkedin"></a>
+      <a href="https://github.com/GallegoVL" class="logo-invertida" target="_blank"><img src="src/assets/github.png" alt="Github"></a>
     </div>
 
     <main>
