--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </header>
 
     <div class="personal-bar">
-      <span><img src="src/assets/pin.png" class="logo-invertida" alt="Tu Foto"> España</span>
-      <span><img src="src/assets/mail.png" class="logo-invertida" alt="Tu Foto"> <a href="mailto:alexgallegofernandez0594@gmail.com">alexgallegofernandez0594@gmail.com</a></span>
-      <span><img src="src/assets/phone.png" class="logo-invertida" alt="Tu Foto"><a href="tel:+34658211311">+34 658 211 311</a></span>
-      <a href="https://www.linkedin.com/in/alexandre-gallego-fern%C3%A1ndez-564403273/" class="logo-invertida" target="_blank"><img src="src/assets/linkedin.png" alt="Linkedin"></a>
-      <a href="https://github.com/GallegoVL" class="logo-invertida" target="_blank"><img src="src/assets/github.png" alt="Github"></a>
+      <span><img src="src/assets/pin.png" class="logo-invertida" alt="Pin"> España</span>
+      <span><img src="src/assets/mail.png" class="logo-invertida" alt="mail"> <a href="mailto:alexgallegofernandez0594@gmail.com">alexgallegofernandez0594@gmail.com</a></span>
+      <span><img src="src/assets/phone.png" class="logo-invertida" alt="phone"><a href="tel:+34658211311">+34 658 211 311</a></span>
+      <span><img src="src/assets/linkedin.png" class="logo-invertida" alt="Linkedin"><a href="https://www.linkedin.com/in/alexandre-gallego-fern%C3%A1ndez-564403273/" target="_blank">Linkedin</a></span>
+      <span><img src="src/assets/github.png" class="logo-invertida" alt="Github"><a href="https://github.com/GallegoVL" target="_blank">GitHub</a></span>
     </div>
 
     <main>
